fix alignment of chevron, avatar, user-name and availability

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   font-family: "Rubik", sans-serif;
   margin: 0;
   background-color: var(--Light-Grayish-Violet);
+  color: var(--White);
 }
 
 .iphone-container {
@@ -55,19 +56,32 @@ body {
   border-radius: 23% 23% 11% 11% / 0% 0% 62% 62%;
 }
 
-.user-menu {
+.user-menu-container {
   background: linear-gradient(90deg, var(--Light-Violet), var(--Light-Magenta));
   border-radius: 10% 10% 2% 2% / 32% 32% 9% 9%;
-  display: flex;
-  color: var(--White);
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   padding: 2em 0.5em 1.5em;
+}
+
+.user-menu {
+  display: flex;
+  transform: translateY(0.5em);
 }
 
 .user-avatar-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+  margin-right: 0.75em;
+}
+
+.user-avatar {
+  margin-left: 1.5em;
+}
+
+.user-avatar img {
+  width: 24px;
+  border-radius: 50%;
+  border: 1px solid var(--White);
 }
 
 .user-avatar::before {
@@ -75,22 +89,20 @@ body {
   border-style: solid;
   border-color: var(--White);
   border-width: 0 0 0.2em 0.2em;
-  display: inline-flex;
-  height: 0.35em;
-  width: 0.35em;
+  /* display: inline-flex; */
+  height: 0.34em;
+  width: 0.34em;
   transform: rotate(54deg) skew(25deg);
   border-radius: 0.15em;
+  position: absolute;
+  top: 0.75em;
+  right: 2.4em;
 }
 
 .user-availability {
   font-size: 0.5rem;
   color: var(--PaleViolet);
-}
-
-.user-avatar img {
-  width: 24px;
-  border-radius: 50%;
-  border: 1px solid var(--White);
+  margin-top: 0.2em;
 }
 
 .images img {
